<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/size_dp_16"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:paddingBottom="24dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_sp_26"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginBottom="@dimen/size_dp_16"
    />
    </FrameLayout>

    <Button
        android:id="@+id/amSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/button_weight"
        android:backgroundTint="@color/white"
        android:text="@string/am_search"
        android:textAllCaps="false"
        android:textColor="@color/black_text"
        android:textSize="@dimen/size_sp_26"
        app:cornerRadius="@dimen/size_dp_16"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/size_dp_10"
        app:iconTint="@color/black_text" />

    <Button
        android:id="@+id/amMediatec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/button_weight"
        android:backgroundTint="@color/white"
        android:text="@string/am_mediatec"
        android:textAllCaps="false"
        android:textColor="@color/black_text"
        android:textSize="@dimen/size_sp_26"
        app:cornerRadius="@dimen/size_dp_16"
        app:icon="@drawable/mediatec"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/size_dp_10"
        app:iconTint="@color/black_text" />

    <Button
        android:id="@+id/amSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/button_weight"
        android:backgroundTint="@color/white"
        android:text="@string/am_settings"
        android:textAllCaps="false"
        android:textColor="@color/black_text"
        android:textSize="@dimen/size_sp_26"
        app:cornerRadius="@dimen/size_dp_16"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/size_dp_10"
        app:iconTint="@color/black_text" />

</LinearLayout>

