<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_dp_61"
    android:orientation="horizontal"
    android:padding="@dimen/size_dp_12">

    <ImageView
        android:id="@+id/artworkUrl"
        style="@style/Cover_Style"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder"/>

    <LinearLayout
        style="@style/Cover_Style"
        android:layout_width="@dimen/size_dp_0"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/size_dp_8"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackId"
            android:layout_width="@dimen/size_dp_0"
            android:layout_height="@dimen/size_dp_0"
            android:text=""
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/trackName"
            style="@style/Track_Name_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                style="@style/Track_Another_Info_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/musician_name" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/Track_Another_Info_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="0"
                android:drawableStart="@drawable/point"
                android:text="@string/track_time" />
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/searchArrow"
        android:layout_width="@dimen/size_dp_8"
        android:layout_height="@dimen/size_dp_14"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/size_dp_5"
        android:src="@drawable/arrow_forward_list" />
</LinearLayout>