<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:padding="@dimen/size_dp_4"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/asSettings"
            android:layout_width="@dimen/size_dp_48"
            android:layout_height="@dimen/size_dp_48"
            android:backgroundTint="@color/white"
            android:src="@drawable/arrowback"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_dp_48"
            android:text="@string/am_settings"
            android:textColor="@color/black_text"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:paddingStart="12dp"
            android:paddingTop="8dp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:padding="@dimen/size_dp_4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/size_dp_16"
            android:layout_marginTop="@dimen/size_dp_21"
            android:layout_marginBottom="@dimen/size_dp_21"
            android:text="@string/as_dark_theme"
            android:textColor="@color/black_text"
            android:textSize="@dimen/size_sp_16"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="@dimen/size_dp_10"
            android:layout_marginBottom="@dimen/size_dp_10"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:padding="@dimen/size_dp_4"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/size_dp_16"
            android:layout_marginTop="@dimen/size_dp_21"
            android:layout_marginBottom="@dimen/size_dp_21"
            android:text="@string/as_share"
            android:textColor="@color/black_text"
            android:textSize="@dimen/size_sp_16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_margin="@dimen/size_dp_21"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:padding="@dimen/size_dp_4"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/size_dp_16"
            android:layout_marginTop="@dimen/size_dp_21"
            android:layout_marginBottom="@dimen/size_dp_21"
            android:text="@string/as_support"
            android:textColor="@color/black_text"
            android:textSize="@dimen/size_sp_16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_margin="@dimen/size_dp_21"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:padding="@dimen/size_dp_4"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/size_dp_16"
            android:layout_marginTop="@dimen/size_dp_21"
            android:layout_marginBottom="@dimen/size_dp_21"
            android:text="@string/as_support"
            android:textColor="@color/black_text"
            android:textSize="@dimen/size_sp_16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowforward"
            android:layout_margin="@dimen/size_dp_21"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>

